# sv_datalayer

./: CMakeLists.txt  DataForTypeMap.h  DataLayerSystem.h  DataLayerUtils.cpp  DataLayerUtils.h  DataNode.cpp  DataNode.h  DataTreeModel.h  DefaultSerializers.cpp  DefaultSerializers.h  README.md  SerializationSystem.cpp  SerializationSystem.h  SerializerInterface.h  TypeDataCollection.h  WidgetMakerSystem.cpp  WidgetMakerSystem.h  WidgetOptions.h  WidgetsForNodeManager.h  sv_datalayer.h
DataNode/: DataNode.cpp  DataNode.h  DataNodeHeader.h  DataNodeSerializers.cpp  DataNodeSerializers.h
DataTypesAndTheirWidgets/: DataTypesAndTheirWidgets.h  Example.h  VectorOfAnyTypeWidgetCreator.h
DataTypesAndTheirWidgets/Bool/: BoolVecWidget.h
DefaultCollections/: ContainerSerializers.h  DefaultSerializers.cpp  DefaultSerializers.h  DefaultWidgetMakers.cpp  DefaultWidgetMakers.h
Interpolation/: InterpolationInterface.h  InterpolationSystem.cpp  InterpolationSystem.h
Registrations/: ContainerInterpolators.h  ContainerSerializers.h  DefaultInterpolators.cpp  DefaultInterpolators.h  DefaultSerializers.cpp  DefaultSerializers.h  DefaultWidgetMakers.cpp  DefaultWidgetMakers.h  Registrations.h
SerializationLogic/: SerializationSystem.cpp  SerializationSystem.h
TypesAndWidgets/: DataNodeWrapperWidget.cpp  DataNodeWrapperWidget.h  LimitedValue.h  TypesAndWidgets.h
TypesAndWidgets/XYWidget/: XYWidget.h
WidgetLogic/: DataNodeWrapperWidget.cpp  DataNodeWrapperWidget.h  WidgetDefs.h  WidgetMakerSystem.cpp  WidgetMakerSystem.h  WidgetsForNodeManager.cpp  WidgetsForNodeManager.h
(+37 files in other folders)
